<resources>
    <string name="app_name" translatable="false">CitraVR (Beta)</string>
    <string name="app_disclaimer">This software will run games for the Nintendo 3DS handheld game console. No game titles are included.\n\nBefore you can begin with emulating, please select a folder to store CitraVR\'s user data in.\n\nWhat\'s this:\n<a href="https://github.com/citra-emu/citra/wiki/CitraVR-Android-user-data-and-storage">Wiki - CitraVR Android user data and storage</a>
    </string>
    <string name="app_notification_channel_name" translatable="false">CitraVR</string>
    <string name="app_notification_channel_id" translatable="false">CitraVR</string>
    <string name="app_notification_channel_description">CitraVR 3DS emulator notifications</string>
    <string name="app_notification_running">CitraVR is Running</string>
    <string name="app_game_install_description">Next, you will need to select a Game Folder. CitraVR will display all of the 3DS ROMs inside of the selected folder in the app.\n\nCIA ROMs, updates and DLC will need to be installed separately by clicking on the folder icon and selecting Install CIA.</string>
    <string name="grid_menu_core_settings">Settings</string>
    <string name="home_options">Options</string>
    <string name="home_search">Search</string>
    <string name="home_games">Games</string>
    <string name="settings_description">Configure emulator settings</string>
    <string name="install_game_content">Install CIA file</string>
    <string name="install_game_content_description">Install games, updates or DLC</string>
    <string name="share_log">Share Log</string>
    <string name="share_log_description">Share CitraVR\'s log file to debug issues</string>
    <string name="gpu_driver_manager">GPU Driver Manager</string>
    <string name="install_gpu_driver">Install GPU driver</string>
    <string name="install_gpu_driver_description">Install alternative drivers for potentially better performance or accuracy</string>
    <string name="driver_already_installed">Driver already installed</string>
    <string name="custom_driver_not_supported">Custom drivers not supported</string>
    <string name="custom_driver_not_supported_description">Custom driver loading isn\'t currently supported for this device.\nCheck this option again in the future to see if support was added!</string>
    <string name="share_log_not_found">No log file found</string>
    <string name="select_games_folder">Select Games Folder</string>
    <string name="select_games_folder_description">Allows CitraVR to populate the games list</string>
    <string name="about">About</string>
    <string name="citra_description">An open-source 3DS emulator</string>
    <string name="about_description">Build version, credits, and more</string>
    <string name="games_dir_selected">Games directory selected</string>
    <string name="select_citra_user_folder_home_description">Changes the files that CitraVR uses to load games</string>
    <string name="theme_and_color_description">Modify the look of the app</string>
    <string name="install_cia_title">Install CIA</string>
    <string name="preferences_network">Network</string>
    <string name="web_api_url">Web API URL</string>
    <string name="web_api_url_description">Web API URL for public room functionality</string>
    <string name="network_token">Network Token</string>
    <string name="network_token_description">Token for public room functionality</string>
    <string name="username_uses_system">This property is linked to the 3DS system username.</string>
    <string name="username_invalid">Username is not valid. Must be 4 to 20 alphanumeric characters.</string>
    <string name="select_gpu_driver">Select GPU driver</string>
    <string name="select_gpu_driver_title">Would you like to replace your current GPU driver?</string>
    <string name="select_gpu_driver_install">Install</string>
    <string name="select_gpu_driver_default">Default</string>
    <string name="select_gpu_driver_install_success">Installed %s</string>
    <string name="select_gpu_driver_use_default">Using default GPU driver</string>
    <string name="select_gpu_driver_error">Invalid driver selected, using system default!</string>
    <string name="system_gpu_driver">System GPU driver</string>
    <string name="installing_driver">Installing driver…</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_description">Made with \u2764 from the CitraVR team</string>
    <string name="contributors_link">https://github.com/citra-emu/citra/graphs/contributors</string>
    <string name="licenses_description">Projects that make CitraVR for Android possible</string>
    <string name="build">Build</string>
    <string name="licenses">Licenses</string>
    <string name="support_link">https://flat2vr.com/</string>
    <string name="website_link">https://docs.google.com/spreadsheets/d/1viN8_MWO1HW9QXlkT-TdCGQbH1g660mKsIp1ZTARdho/</string>
    <string name="github_link">https://github.com/amwatson/CitraVR</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">Learn how to setup &lt;b&gt;CitraVR&lt;/b&gt; and jump into emulation.</string>
    <string name="get_started">Get started</string>
    <string name="step_complete">Complete!</string>
    <string name="games">Games</string>
    <string name="games_description">Select your &lt;b&gt;Games&lt;/b&gt; folder with the button below.</string>
    <string name="done">Done</string>
    <string name="done_description">You\'re all set.\nEnjoy your games!</string>
    <string name="text_continue">Continue</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Grant the notification permission with the button below.</string>
    <string name="give_permission">Grant permission</string>
    <string name="notification_warning">Skip granting the notification permission?</string>
    <string name="notification_warning_description">CitraVR won\'t be able to notify you of important information.</string>
    <string name="filesystem_permission_warning">Missing Permissions</string>
    <string name="filesystem_permission_warning_description">Azahar requires permission to manage files on this device in order to store and manage its data.\n\nPlease grant the \"Filesystem\" permission before continuing.</string>
    <string name="camera_permission">Camera</string>
    <string name="camera_permission_description">Grant the camera permission below to emulate the 3DS camera.</string>
    <string name="microphone_permission">Microphone</string>
    <string name="microphone_permission_description">Grant the microphone permission below to emulate the 3DS microphone.</string>
    <string name="filesystem_permission">Filesystem</string>
    <string name="filesystem_permission_description">Grant the filesystem permission below to allow Azahar to store files.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="add_games_warning">Skip selecting games folder?</string>
    <string name="add_games_warning_description">Games won\'t be displayed in the Games list if a folder isn\'t selected.</string>
    <string name="add_games_warning_help">https://citra-emu.org/wiki/dumping-game-cartridges/</string>
    <string name="permissions">Permissions</string>
    <string name="select_emulator_data_folders">Data Folders</string>
    <string name="select_emulator_data_folders_description">Select data folders&lt;br/&gt;(User folder is required)</string>
    <string name="permissions_description">Grant optional permissions to use specific features of the emulator</string>
    <string name="warning_help">Help</string>
    <string name="warning_skip">Skip</string>
    <string name="warning_cancel">Cancel</string>
    <string name="select_citra_user_folder">Select User Folder</string>
    <string name="select_citra_user_folder_description">Select your &lt;a href="https://github.com/citra-emu/citra/wiki/CitraVR-Android-user-data-and-storage"&gt;user data&lt;/a&gt; directory with the button below.</string>
    <string name="select_which_user_directory_to_use">You appear to have user directories set for both Lime3DS and Azahar. This is likely because you upgraded to Azahar, and when prompted chose a different user directory than what was being used for Lime3DS.\n\nThis may have resulted in you thinking you lost saves or other settings - we apologize if that happened.\n\nWould you like to go back to using your original Lime3DS user directory, restoring settings and save games from Lime3DS, or keep your current Azahar user directory?\n\nNeither directory will be deleted, regardless of your choice, and you may freely switch between them using the Select User Folder option.</string>
    <string name="keep_current_azahar_directory">Keep Current Azahar Directory</string>
    <string name="use_prior_lime3ds_directory">Use Prior Lime3DS Directory</string>
    <string name="select">Select</string>
    <string name="cannot_skip">You can\'t skip this step</string>
    <string name="cannot_skip_directory_description">This step is required to allow CitraVR to work. Please select a directory and then you can continue.</string>
    <string name="preferences_layout">Layout</string>
    <string name="emulation_secondary_display_enable">Enable Secondary Display</string>
    <string name="emulation_select_secondary_display">Choose Display</string>
    <string name="emulation_screen_layout_largescreen">Large Screen</string>
    <string name="emulation_screen_layout_sidebyside">Side by Side Screens</string>
    <string name="emulation_screen_layout_hybrid">Hybrid Screens</string>
    <string name="emulation_screen_layout_original">Original</string>
    <string name="emulation_secondary_display_opposite">Opposite Screen</string>
    <string name="emulation_top_screen">Top Screen</string>
    <string name="emulation_bottom_screen">Bottom Screen</string>
    <string name="game_context_open_save_dir">Open Save Data Folder</string>
    <string name="game_context_open_app">Open Application Folder</string>
    <string name="game_context_open_mods">Open Mods Folder</string>
    <string name="game_context_open_textures">Open Textures Folder</string>
    <string name="game_context_open_dlc">Open DLC Folder</string>
    <string name="game_context_open_updates">Open Updates Folder</string>
    <string name="game_context_open_extra">Open Extra Folder</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="edit_icon">Edit icon</string>
    <string name="shortcut_image_stretch_toggle">Stretch to fit image</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="multiplayer_create_room">Create</string>
    <string name="multiplayer_join_room">Join</string>
    <string name="multiplayer_public_room">Browse Public Rooms</string>
    <string name="multiplayer_username">Username</string>
    <string name="multiplayer_ip_address">IP Address</string>
    <string name="multiplayer_ip_port">Port</string>
    <string name="multiplayer_exit_room">Exit Room</string>
    <string name="multiplayer_password">Password</string>
    <string name="multiplayer_room_name">Room Name</string>
    <string name="multiplayer_max_players_value">Max Players: %d</string>
    <string name="multiplayer_chat">Chat</string>
    <string name="chat">Chat</string>
    <string name="type_message">Type message……</string>
    <string name="send_message">Send Message</string>
    <string name="multiplayer_moderation">Moderation</string>
    <string name="prefered_game_name">Preferred Game</string>
</resources>