<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_enable_secondary_layout"
        android:title="@string/emulation_secondary_display_enable"
        android:checkable="true"
        android:checked="true"/>
    <item
        android:id="@+id/menu_secondary_choose"
        android:title="@string/emulation_select_secondary_display">
        <menu>
            <group
                android:id="@+id/menu_secondary_management_display_group"
                android:checkableBehavior="single">
            </group>
        </menu>
    </item>
    <item
        android:title="@string/preferences_layout"
        android:enabled="false"/>
    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_secondary_layout_group">
        <item
            android:id="@+id/menu_secondary_layout_opposite"
            android:title="@string/emulation_secondary_display_opposite" />

        <item
            android:id="@+id/menu_secondary_layout_top"
            android:title="@string/emulation_top_screen" />

        <item
            android:id="@+id/menu_secondary_layout_bottom"
            android:title="@string/emulation_bottom_screen" />

        <item
            android:id="@+id/menu_secondary_layout_side_by_side"
            android:title="@string/emulation_screen_layout_sidebyside" />
        <item
            android:id="@+id/menu_secondary_layout_original"
            android:title="@string/emulation_screen_layout_original" />
        <item
            android:id="@+id/menu_secondary_layout_hybrid"
            android:title="@string/emulation_screen_layout_hybrid" />
        <item
            android:id="@+id/menu_secondary_layout_largescreen"
            android:title="@string/emulation_screen_layout_largescreen" />

    </group>

</menu>
