<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shortcut_icon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"/>

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_edit"
            android:padding="8dp"
            android:contentDescription="@string/edit_icon"
            app:tint="?attr/colorAccent"
            android:background="@drawable/shortcut_edit_background"
            android:alpha="0.8"/>

    </FrameLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/image_scale_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="@string/shortcut_image_stretch_toggle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/shortcut_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shortcut_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>